bicep/infra/postdeploy/k8smanifests/networkpolicy-deny-all.yml
#Creates a default deny for ingress/egress in the namespace you apply it
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
***REMOVED***
  podSelector: {***REMOVED***
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
***REMOVED***
  podSelector: {***REMOVED***
  policyTypes:
  - Egress
